[project]
name = "restaurant-reservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
